--- a/package.json
+++ b/package.json
@@ -18,13 +18,24 @@
   },
   "homepage": "https://github.com/mdesanker/store-api#readme",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-validator": "^6.14.0",
+    "helmet": "^5.0.2"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.0.3",
     "nodemon": "^2.0.16",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
