--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
-    "helmet": "^5.0.2"
+    "helmet": "^5.0.2",
+    "mongoose": "^6.3.2"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
