--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "helmet": "^5.0.2",
+    "mongodb-memory-server": "^8.5.2",
     "mongoose": "^6.3.2"
   },
   "devDependencies": {
