--- a/package.json
+++ b/package.json
@@ -18,20 +18,24 @@
   },
   "homepage": "https://github.com/mdesanker/store-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^8.5.2",
     "mongoose": "^6.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.31",
     "@types/supertest": "^2.0.12",
     "jest": "^28.0.3",
